# Olmem-Tech-Outreach-Agent

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  vercel.json
docs/: admin-query.sql  nextjs-outreach-sync-route.ts
outreach/: __init__.py  admin.py  adminauth.py  adminui.py  catalog.py  composer.py  config.py  crawler.py  criteria.py  db.py  discovery.py  llm.py  models.py  orchestrator.py  repository.py  research.py  scoring.py  sender.py  suppression.py  sync.py  util.py
sql/: schema.sql
tests/: test_scoring.py  test_util.py
